--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
 
     ext {
         supportLibVersion = '27.1.1'
-        roomVersion = '1.0.0'
+        roomVersion = '1.1.1'
         timberVersion = '4.6.0'
         daggerVersion = '2.11'
         javaxAnnotationVersion = '10.0-b28'
@@ -34,6 +34,7 @@ allprojects {
         junitVersion = '4.12'
         testRunnerVersion = '1.0.2'
         espressoVersion = '3.0.2'
+        coroutinesVersion = '0.23.4'
     }
 }
 
